--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -163,3 +163,10 @@
     なるべく自然発酵に任せるのが氏のスタイルだがサワードウの発酵がイマイチならイーストも使うんだ。
     発酵乳は最近ヴィーリを始めてみた。市販の種菌を使ってるが、本書でも書いてる通りバックスロッピングを重ねると元気がなくなる。
     純粋培養の菌だと自然にさらされたときに周りの菌が入ってきてバランスが崩れるせいかな。
+- date: 2025-07-17
+  bookTitle: サンダー・キャッツの発酵教室
+  pages: 88 ~ 123
+  notes: |
+    テンペ、塩水で発酵させたピクルス、ケイパーとミルクウィード(オオトウワタ)、キムチ。
+    あとポエミーな発酵の話。発酵＝扇動の話はメタファーとしての発酵でもあったし、改めてずっと続けてる考え方なのだとわかる。
+    発酵の文化史のところも、発酵の旅にその要素を感じられるかな。著書のつながりが見えるようで感慨深い。
