--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -170,3 +170,12 @@
     テンペ、塩水で発酵させたピクルス、ケイパーとミルクウィード(オオトウワタ)、キムチ。
     あとポエミーな発酵の話。発酵＝扇動の話はメタファーとしての発酵でもあったし、改めてずっと続けてる考え方なのだとわかる。
     発酵の文化史のところも、発酵の旅にその要素を感じられるかな。著書のつながりが見えるようで感慨深い。
+- date: 2025-07-18
+  bookTitle: サンダー・キャッツの発酵教室
+  pages: 124 ~ 142
+  notes: |
+    氏が日本に来たときのすんき旅行の話。すんきのレシピ。
+    このすんき旅行は発酵の旅の中でも印象深い話だった。バックスロッピングで行う無縁の乳酸発酵。
+    本書では氏の視点でないので 2 冊で 2 つの視点からすんきの話が読めるというわけ。
+    日本に住んでいてもこの本を読むまで知らなかった。味噌に大豆以外を使う自由さも同じく。
+    これで本書は終わり。また読み返そう。
