--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -69,3 +69,6 @@
   bookTitle: サンダー・キャッツの発酵教室
   bookAuthor: Sandor Ellix Katz, 和田侑子, 谷奈緒子
   previouslyRead: true
+- id: becoming-a-technical-leader
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  bookAuthor: Gerald. M. Weinberg, 木村 泉
