--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -179,3 +179,12 @@
     本書では氏の視点でないので 2 冊で 2 つの視点からすんきの話が読めるというわけ。
     日本に住んでいてもこの本を読むまで知らなかった。味噌に大豆以外を使う自由さも同じく。
     これで本書は終わり。また読み返そう。
+- date: 2025-07-19
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: i ~ v
+  notes: |
+    長らく積んでたので読むことにした。
+    まえがき。
+    成功するプロジェクトにいた傑出した少数の技術労働者を、技術的能力とリーダーシップが結合した技術リーダーと呼び、講習を行った。
+    これらの人々は技術と関係なく問題解決型リーダーとして変容する。
+    彼らは講習をきっかけにして自身がそうなることを選択したのであって、講習でそうなったわけではない。本書がそのきっかけとなることを願う。というもの。
