--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -188,3 +188,13 @@
     成功するプロジェクトにいた傑出した少数の技術労働者を、技術的能力とリーダーシップが結合した技術リーダーと呼び、講習を行った。
     これらの人々は技術と関係なく問題解決型リーダーとして変容する。
     彼らは講習をきっかけにして自身がそうなることを選択したのであって、講習でそうなったわけではない。本書がそのきっかけとなることを願う。というもの。
+- date: 2025-07-20
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: vi ~ xxi
+  notes: |
+    推薦の辞、訳者まえがき。
+    問題解決型のリーダーシップ≒技術革新の力、動機づけ、組織化の能力を併せ持つこと。
+    アメとムチのリーダシップを直線的として、システム開発のような問題解決型の状況では役に立たないので、問題解決型のリーダーシップが必要と。
+    原著の出版 40 年近く前で同世代レベルだが、この直線的なリーダシップが現在も見られるのは笑えるな。
+    本書はリーダシップの定義、技術革新、(他社に対する)動機づけ、組織化、(自身のリーダーへの)変容、で構成されてる。
+    コンサルタントの秘密も積読しておこう。世間的には先にあっちを読むべきようだが、逆行してても良い。
