--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -198,3 +198,14 @@
     原著の出版 40 年近く前で同世代レベルだが、この直線的なリーダシップが現在も見られるのは笑えるな。
     本書はリーダシップの定義、技術革新、(他社に対する)動機づけ、組織化、(自身のリーダーへの)変容、で構成されてる。
     コンサルタントの秘密も積読しておこう。世間的には先にあっちを読むべきようだが、逆行してても良い。
+- date: 2025-07-21
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 1 ~ 14
+  notes: |
+    第 1 部 定義。
+    リーダシップありふれた話題であるが理解されておらず神話や誤解がある。
+    この部でそれらを取り除き、リーダーシップのモデルを構築する。
+    第 1 章 リーダーシップとは、結局のところなんなのか。
+    一つの原因に一つの結果が伴うようなものを直線的なモデル、それに対し有機的なモデルはシステム思考的な複雑な要素の絡み合いで結果が導かれたと考える。
+    直線的なモデルは謂わば人を型にはめて変化を拒む。有機的なモデルは人を個人として捉え、変化を受け入れる。
+    氏の言うリーダーシップは自律的に道を選ぶことか。挿絵が種から育つぶどうか。示唆的やな。
