--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -209,3 +209,15 @@
     一つの原因に一つの結果が伴うようなものを直線的なモデル、それに対し有機的なモデルはシステム思考的な複雑な要素の絡み合いで結果が導かれたと考える。
     直線的なモデルは謂わば人を型にはめて変化を拒む。有機的なモデルは人を個人として捉え、変化を受け入れる。
     氏の言うリーダーシップは自律的に道を選ぶことか。挿絵が種から育つぶどうか。示唆的やな。
+- date: 2025-07-22
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 15 ~ 24
+  notes: |
+    第 2 章 リーダーシップ様式に関するモデル。
+    MOI(Motivation, Organization, Idea ないし Innovation) モデルは自分がどのようなリーダシップの様式を持っているか理解するのに役立つ。
+    関係する人を突き動かすもの、アイデアを実現することを可能にする構造・組織化、実現されるもののイメージ。
+    それぞれのリーダーで好みはあれど、これらがバランスよく機能することが求められる。
+    さらに技術リーダーは問題の理解・アイディアの流れを調整する・品質を保持するといった要素を問題解決で重視する(これは次の章で詳しく)。
+    問題解決型のリーダーが必ず「もっとよいやりかたは必ずある」という信仰を備えている。
+    組織化は人の統率だけでなくその人の行動を整えるみたいな文脈があるみたい？
+    自分の子供の頃にアイデアによる成功体験なかったので、いつ「もっとよいやりかたは必ずある」という信仰を持つようになったのか定かではないな。
