--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -221,3 +221,16 @@
     問題解決型のリーダーが必ず「もっとよいやりかたは必ずある」という信仰を備えている。
     組織化は人の統率だけでなくその人の行動を整えるみたいな文脈があるみたい？
     自分の子供の頃にアイデアによる成功体験なかったので、いつ「もっとよいやりかたは必ずある」という信仰を持つようになったのか定かではないな。
+- date: 2025-07-23
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 25 ~ 34
+  notes: |
+    第 3 章 技術リーダーの問題解決様式。
+    技術リーダーシップと呼ぶ技術革新のやりかたは 3 つの行動様式に分けられる。
+    問題の理解、アイディアの流れを調整する、品質を保持する。
+    問題の肝要となる細部に注意を払い、問題の本質を理解するために何度も繰り返し考える。チームにもそれを奨励する。
+    (多くは繰り返されよく知られた)うまいアイデアを提供・模倣し、チームのアイデアを引き出し練り上げる。アイデアを批判しヒトを批判しない。
+    アイデアは問題解決のためのツールであり、いつまでもアイデア出しに浪費しない。またアイデアを捨てたり再利用することも厭わない。
+    問題解決の品質にこだわり、常に品質を計測し計画と比較する。遂行のためには計画の変更も辞さない。
+    失敗を失敗のままにせず次のアイデア生成周期に活かす。
+    Team Geek の様なチーム作りの本に通ずるものがある。こっちの方が古いし同じことが言葉を変えて繰り返されてるのか。アイデアと同じく。
