--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -234,3 +234,14 @@
     問題解決の品質にこだわり、常に品質を計測し計画と比較する。遂行のためには計画の変更も辞さない。
     失敗を失敗のままにせず次のアイデア生成周期に活かす。
     Team Geek の様なチーム作りの本に通ずるものがある。こっちの方が古いし同じことが言葉を変えて繰り返されてるのか。アイデアと同じく。
+- date: 2025-07-23
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 35 ~ 46
+  notes: |
+    第 4 章 リーダーはどう育つか。
+    リーダーというかヒトの成長曲線を高原谷間モデルで表現する。
+    成長は線形でなく、躍進の高原と停滞・後退の谷間を繰り返す。
+    谷間の停滞・後退の間に積み重ね、ブレークスルーの試行錯誤をし、飛躍する。
+    高原谷間モデルのサイクルを繰り返すことで学び方を学び、飛躍のためのコストも下がっていく。
+    すべての谷間が高原に繋がる保証はないが、着実に成長していく。
+    よく分かる。転職や経験のない技術やタスクなんかも同じで、何度か経験したあとは、多少しんどくてもどうせできるしなという実力と自信が醸成されてくる。
