--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -234,7 +234,7 @@
     問題解決の品質にこだわり、常に品質を計測し計画と比較する。遂行のためには計画の変更も辞さない。
     失敗を失敗のままにせず次のアイデア生成周期に活かす。
     Team Geek の様なチーム作りの本に通ずるものがある。こっちの方が古いし同じことが言葉を変えて繰り返されてるのか。アイデアと同じく。
-- date: 2025-07-23
+- date: 2025-07-24
   bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
   pages: 35 ~ 46
   notes: |
@@ -245,3 +245,14 @@
     高原谷間モデルのサイクルを繰り返すことで学び方を学び、飛躍のためのコストも下がっていく。
     すべての谷間が高原に繋がる保証はないが、着実に成長していく。
     よく分かる。転職や経験のない技術やタスクなんかも同じで、何度か経験したあとは、多少しんどくてもどうせできるしなという実力と自信が醸成されてくる。
+- date: 2025-07-25
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 47 ~ 58
+  notes: |
+    第 5 章 でも私は……
+    リーダーになることに伴う痛みを避けるためによく使われる口実、及びそれらを棄却する説明。
+    有機的なチームではそれぞれがリーダーシップをうまく発揮し機能するので「任命された」マネージャーだけが重要な訳では無い。
+    リーダーになることで最新の技術のような特定の技術能力を失うのは確かだが、それは問題解決のメタ技術を獲得するのとのトレードオフ。
+    同時に成長痛を伴う。その機会を遅らせることもできるがいつかは避けられない。
+    リーダーシップを大き過ぎる力と思うかも知れないが、みな特殊技能を持った普通の人であって、アプローチを習得すれば周囲の人でもできる。
+    本書が書かれた頃よりも技術的アイデアが大きく影響力を持つ様になった今でも、リーダーシップは特別なものではないかなという感じはするな。一部の BigTech に求められる影響力や倫理を除けば。
