--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -256,3 +256,16 @@
     同時に成長痛を伴う。その機会を遅らせることもできるがいつかは避けられない。
     リーダーシップを大き過ぎる力と思うかも知れないが、みな特殊技能を持った普通の人であって、アプローチを習得すれば周囲の人でもできる。
     本書が書かれた頃よりも技術的アイデアが大きく影響力を持つ様になった今でも、リーダーシップは特別なものではないかなという感じはするな。一部の BigTech に求められる影響力や倫理を除けば。
+- date: 2025-07-26
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 59 ~ 72
+  notes: |
+    第 2 部 技術革新。
+    リーダーの技術革新において、リーダー自身のメタ認知の欠如が障害となる可能性がある。
+    これら主要な障害とその克服の方法を学ぶ。
+    第 6 章 技術革新への三大障害。
+    自己盲目性。自身の振る舞いを驚くほど覚えていないことが自己の改善の障害となる。
+    問題ない症候群。問題を軽視し解決方法ありきで考えることが、問題の理解と解決をするうえで障害となる。
+    答えが 1 つであるという信仰。「 1 つの正しい答え」のみを信じて取るべき選択肢を見失うことが障害となる。
+    基本的にメタ認知の欠如よな。自分が特別とか「正しい答え」が特別とかのバイアスがある。
+    あるがままを受け入れるのが良やが難しいんやろな。
