--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -269,3 +269,14 @@
     答えが 1 つであるという信仰。「 1 つの正しい答え」のみを信じて取るべき選択肢を見失うことが障害となる。
     基本的にメタ認知の欠如よな。自分が特別とか「正しい答え」が特別とかのバイアスがある。
     あるがままを受け入れるのが良やが難しいんやろな。
+- date: 2025-07-27
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 73 ~ 82
+  notes: |
+    第 7 章 自分自身への気づきを高める法。
+    MOI モデルの技術革新の力・動機づけ・組織化の能力のうち動機づけだけは、リーダー自身が変わりたいと思っていない限り得られない。
+    本書では動機づけのテストとして、個人的な日誌をつけるために 3 ヶ月間毎日 5 分使うことを提案する。
+    仮に日誌に使う 5 分を無駄と思う場合は、変化のリスクを許容できずに時間の無駄として取り組まないだろう。
+    日誌に記した内容を読み返してみて自身へのメタ認知を高める。
+    わたしも 10 年以上仕事の日誌を習慣にしている。休日はつけてないが、それでも自分の思考の偏りやそのとき何を大切に思っていたかは読み取れるところがよいと感じている。
+    稀に誰かに勧めてみても殆どの人はやらないのだが、本書でいうところの変化を切望するリーダーのような人でもない限りやらないというのがリアリティがある。
