--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -280,3 +280,13 @@
     日誌に記した内容を読み返してみて自身へのメタ認知を高める。
     わたしも 10 年以上仕事の日誌を習慣にしている。休日はつけてないが、それでも自分の思考の偏りやそのとき何を大切に思っていたかは読み取れるところがよいと感じている。
     稀に誰かに勧めてみても殆どの人はやらないのだが、本書でいうところの変化を切望するリーダーのような人でもない限りやらないというのがリアリティがある。
+- date: 2025-07-28
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 83 ~ 92
+  notes: |
+    第 8 章 アイディアの力を育てる。
+    自身への気付き同様に問題解決型リーダーシップではアイディアの力を育てる戦略も不可欠。
+    問題解決型リーダーは「正しい一つの答え」の他にまだ発見していない答えがあると信じていて、それが技術革新につながる。
+    創造的な間違い、盗んだ(そして間違った)アイディア、アイディアの結合、がアイディア生成の三大戦略。
+    いずれの戦略も「アメとムチ」の「正しい一つの答え」の信仰のもとでは「正しい答え」を「知っている」ので、アイディアを誤ったり盗んだり組み合わせたりしてアイディアを生み出せる可能性を摘んでしまう。
+    音楽等の芸術も模倣から得るものは多いしそれと同じよな。
