--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -290,3 +290,14 @@
     創造的な間違い、盗んだ(そして間違った)アイディア、アイディアの結合、がアイディア生成の三大戦略。
     いずれの戦略も「アメとムチ」の「正しい一つの答え」の信仰のもとでは「正しい答え」を「知っている」ので、アイディアを誤ったり盗んだり組み合わせたりしてアイディアを生み出せる可能性を摘んでしまう。
     音楽等の芸術も模倣から得るものは多いしそれと同じよな。
+- date: 2025-07-29
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 93 ~ 103
+  notes: |
+    第 9 章 ビジョン。
+    著者の経験では問題解決型のリーダーには必ずビジョンがある。
+    彼らは敗北を新たな成功への跳躍に使う能力がある。普通のビジョンを個人的な特別なビジョンに結びつける。
+    そのビジョンが仕事を自分の延長部にし、品質への強迫観念をもたらす。
+    ビジョンに基づく行動が人々とのやり取りにも影響を与え、共有されたビジョンは人々の行動につながる。
+    大教訓の第二なくね？見つかんない気が...
+    ビジョンというとふわっとしてるが、金銭や名声のような対外的な価値と違った内的な信念に動機づけされてると強いというのはそう思う。
