--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -301,3 +301,16 @@
     ビジョンに基づく行動が人々とのやり取りにも影響を与え、共有されたビジョンは人々の行動につながる。
     大教訓の第二なくね？見つかんない気が...
     ビジョンというとふわっとしてるが、金銭や名声のような対外的な価値と違った内的な信念に動機づけされてると強いというのはそう思う。
+- date: 2025-07-30
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 104 ~ 120
+  notes: |
+    第 3 部 動機づけ。
+    多くのビジョンは他の人々を助けるものだが、それでも他の人達は動かない。その障害が何か、それに対し何が出きるかを学ぶ。
+    第 9 章 人に動機づけを与えることについての、第 1 の障害。
+    動機づけにおける第 1 の障害は、他人から見るように自分自身を見ることができない、というもう 1 つの自己盲目性。
+    コミュニケーションに顕在部分と潜在部分がある。潜在部分を理解するのにバージニア・サティアのやり取りのモデルが使える。
+    プロセスは知覚入力・解釈・感情・感情についての感情・防御・発言に関する規則・結果で構成され、それぞれのプロセスで認知の歪みが生じる。
+    この他人の認知に筋道をつけるために、自分自身の潜在部分を率直に伝えることが、認知の助けになる。
+    自分の弱みを見せるため、攻撃を受ける多少のリスクはあるし、ときには谷間に落ちる勇気も必要になる。
+    これ自己開示の話よな。これも学びのメタサイクルと同じで慣れればそのコストは大したものじゃなくなる印象。
