--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -314,3 +314,13 @@
     この他人の認知に筋道をつけるために、自分自身の潜在部分を率直に伝えることが、認知の助けになる。
     自分の弱みを見せるため、攻撃を受ける多少のリスクはあるし、ときには谷間に落ちる勇気も必要になる。
     これ自己開示の話よな。これも学びのメタサイクルと同じで慣れればそのコストは大したものじゃなくなる印象。
+- date: 2025-07-31
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 121 ~ 130
+  notes: |
+    第 10 章 人に動機づけを与えることについての、第 2 の障害。
+    仕事が複雑である限り人と仕事を分けて考えることはできない。これが第 2 の障害。
+    仕事の成否が怪しくなったチームでは仕事と人のどちら取るべきか？というような典型的な二律背反を信じるのは、人に動機づけを与えるうえで障害となる。
+    仕事のあるところには人があり、仕事の対象は人である。
+    過去に計画を落とすと色んな人が傷つくということで開発者自身の超過勤務は黙認されるようなことを見てきたし体験もしたが、あれは人を優先してると見せかけた仕事優先型なわけか。
+    ではこの場合技術リーダーなら具体的にどうするんやろな。失敗や部分的な未達を許容するってことかな。
