--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -10,3 +10,14 @@
     善意の助力も、利己的なものであったり、邪魔立てだと思われることがしばしばある。
     このように必ず成功すると限らない助力は人々への気遣いを必要とし、また自分に対しての気遣いも必要とする。
     助力される側の意思がないといけないのとか、行動変容と同じやな。行動変容は助力か。
+- date: 2025-08-02
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 143 ~ 154
+  notes: |
+    第 13 章 動機づけのできる人になるには。
+    誰しも人とやり取りするためのサバイバル規則を構築してきている。
+    中でもメタ規則はその規則自体のアイディアの流れを制御する。
+    サバイバル規則は生き残り上の価値があって習得しているので、規則を自覚していても変えるのは難しく、変えるためには段階を踏んで規則の個別化・緩和を行う必要がある。
+    そしてそのサバイバル規則の中に否定的な自己評価があれば、まずその規則を取り払うことから始める。
+    お次は自己変容。誰かを動機付けるにはまず自分を評価しないと始まらないというのはなるほどな。
+    読んだことないし読むか。「人を動かす」。
