--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -21,3 +21,13 @@
     そしてそのサバイバル規則の中に否定的な自己評価があれば、まずその規則を取り払うことから始める。
     お次は自己変容。誰かを動機付けるにはまず自分を評価しないと始まらないというのはなるほどな。
     読んだことないし読むか。「人を動かす」。
+- date: 2025-08-03
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 155 ~ 162
+  notes: |
+    第 14 章 力はどこからくるか。
+    自尊心があれば人を動機づけられることが受け入れられない人は、特別な力を手に入れれば突然強力になれる、と考えがちだがそれは危険な考えである。
+    力は関係から生まれている。人と組織の依存関係、役割を得て組織から期待される力。
+    そのため力を欲して昇進を受け入れたものの、期待された力を発揮できず、無力とみなされることもある。
+    時節にあやかって得られる力。例えば情報技術は高度な情報化社会で力になる。
+    絶対的な力というのがなくて、とりまく環境に左右されて相対的に力を得たり失ったりする、という感じかな。
