--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -31,3 +31,14 @@
     そのため力を欲して昇進を受け入れたものの、期待された力を発揮できず、無力とみなされることもある。
     時節にあやかって得られる力。例えば情報技術は高度な情報化社会で力になる。
     絶対的な力というのがなくて、とりまく環境に左右されて相対的に力を得たり失ったりする、という感じかな。
+- date: 2025-08-04
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 163 ~ 174
+  notes: |
+    第 15 章 力、不完全性、整合性。
+    問題の殆ど情緒的・心理的な動揺なく機械的にテクニックで解決できる問題だが、実際にその様に機械的に解決されることは少ない。
+    それは低い自尊心を守るための防衛反応により、行動に移さないことによる。
+    このように問題はできごとに対する反応で起こっている。
+    そのできごとに対する行動パターンが成熟しているか否かで、できごとを問題にしてしまったり、問題を消滅させたりする。
+    単純化した説明では、それは人として成熟しているか否かであり、行動を起こす際に社会的・コミュイケーション的な技能を発揮できるかである。
+    この章ちょっとわたしには難しかった。場数を踏んでなかったり成熟してなかったりでピンと来てない感じがする。
