--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -42,3 +42,15 @@
     そのできごとに対する行動パターンが成熟しているか否かで、できごとを問題にしてしまったり、問題を消滅させたりする。
     単純化した説明では、それは人として成熟しているか否かであり、行動を起こす際に社会的・コミュイケーション的な技能を発揮できるかである。
     この章ちょっとわたしには難しかった。場数を踏んでなかったり成熟してなかったりでピンと来てない感じがする。
+- date: 2025-08-05
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 175 ~ 184
+  notes: |
+    第 4 部 組織化。
+    動機づけの能力だけでなくなぜ組織力が必要か、既存の力をどのように変換するか、有能な組織者になるための道筋を示す。
+    第 16 章 組織上の力を手に入れる。
+    人格の力以外でリーダーが使えるものに予算や人員のような資源≒組織上の力がある。
+    それは平等に与えられるものではないため、新人リーダーはそれらを自分のチームのために他のチームから勝ち取る必要がある。
+    その競争にそれまでの既存の力を変換する手段が使える。
+    例えば、重大な仕事担っているだとか居ること自体に理由がある様な場合、それらを媒介にして別の力を得る駆け引きができる。
+    これはわたしが信頼ポイントと呼んでるものに近い。仕事を通して貯めたポイントで多少の無理を勝ち取れる。
