--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -54,3 +54,15 @@
     その競争にそれまでの既存の力を変換する手段が使える。
     例えば、重大な仕事担っているだとか居ること自体に理由がある様な場合、それらを媒介にして別の力を得る駆け引きができる。
     これはわたしが信頼ポイントと呼んでるものに近い。仕事を通して貯めたポイントで多少の無理を勝ち取れる。
+- date: 2025-08-06
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 183 ~ 194
+  notes: |
+    第 17 章 問題解決チームの効果的組織法
+    チームを組織する手法は個人別・投票・強力なリーダー・コンセンサスの 4 種に大別され、大抵はそれぞれの短所を補うために混合が選ばれる。
+    個人別は投票の前段階といえる。また他の手法を検討するうえでの基準値としても役立つ。
+    投票は概ねチームの平均的な回答に収束するため、うまく動いているチームの場合はどの手法よりも品質が劣る。また意思決定の情報がメンバーに流れず学ぶ機会がなくなる。
+    強力なリーダーでは概ねリーダーの性能に品質は依存するが、知識の浅いメンバーの影響を受けて品質を落とすこともある。
+    コンセンサスは、時間はかかるが高品質の決定を得られ、全ての情報も共有され学びになる。ただし専門知識が貧弱だと投げやりな議論に時間を費やしコンセンサスは崩壊する。
+    いずれの手法も、解決したい問題に合わせ、状況に適した最良の手法を選択すべきである。
+    数年チームを率いてないのでアレやが、状況に応じて最良の～ってのは有機的なチームの特徴と重なって見えた。
