--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -66,3 +66,13 @@
     コンセンサスは、時間はかかるが高品質の決定を得られ、全ての情報も共有され学びになる。ただし専門知識が貧弱だと投げやりな議論に時間を費やしコンセンサスは崩壊する。
     いずれの手法も、解決したい問題に合わせ、状況に適した最良の手法を選択すべきである。
     数年チームを率いてないのでアレやが、状況に応じて最良の～ってのは有機的なチームの特徴と重なって見えた。
+- date: 2025-08-07
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 195 ~ 204
+  notes: |
+    第 18 章 有効な組織づくりへの障害は？
+    有効な組織は状況に合わせて有機的にリーダーを選出する。
+    この有効な組織づくりへの障害は大きく 4 つ、命令する側される側に二分する、人を機械のように扱う、技術リーダー自身がやってしまう、不手際により発生した問題解消したことに報酬を与える、がある。
+    技術リーダーの仕事は自分で問題解決をするのでなく、問題解決の環境を作り上げることといえる。
+    だから、リーダー自身が手を下したり、問題に対処するため徹夜したメンバを称賛して問題を未然に防いだメンバを称賛しない等が、組織づくりに障害を与える。
+    自分で手を下しがちよな。手を下してしまうから有機的な組織にならないのか、あるいはその逆か。卵と鶏の話のようやがここは手を出さないべきなんかもな。
