--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -76,3 +76,15 @@
     技術リーダーの仕事は自分で問題解決をするのでなく、問題解決の環境を作り上げることといえる。
     だから、リーダー自身が手を下したり、問題に対処するため徹夜したメンバを称賛して問題を未然に防いだメンバを称賛しない等が、組織づくりに障害を与える。
     自分で手を下しがちよな。手を下してしまうから有機的な組織にならないのか、あるいはその逆か。卵と鶏の話のようやがここは手を出さないべきなんかもな。
+- date: 2025-08-08
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 205 ~ 214
+  notes: |
+    第 19 章 組織づくりの学び方。
+    チームをより良く対処させ発展するようにしむけるにはどうすればよいか。そのためのいくつかのアイディア。
+    原始的な方法は、公私を問わず活動・団体・講習など組織づくりの実体験に参加して練習する。
+    より近代的な方法として、組織を観察し変化を投入するような実験をしてみる。
+    解決したい問題に対し不適切な組織形態をとっているような不整合を探してみる。
+    組織を構成する人々の性格の傾向の個人差を知り、その違いを許容するようにしてみる。
+    これらのアイディアだけでなく、観察して学び始めると学習方法がいくらでも見つかるようになると。
+    組織づくりをしていくと実践者自身が組織の一部となり、自身も変容の対象になっていく。この自己変容の話は以降の章で詳しく。
