--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -88,3 +88,13 @@
     組織を構成する人々の性格の傾向の個人差を知り、その違いを許容するようにしてみる。
     これらのアイディアだけでなく、観察して学び始めると学習方法がいくらでも見つかるようになると。
     組織づくりをしていくと実践者自身が組織の一部となり、自身も変容の対象になっていく。この自己変容の話は以降の章で詳しく。
+- date: 2025-08-09
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 215 ~ 226
+  notes: |
+    第 5 部 変容。
+    リーダーとして自己変容していくなかで、どのように周りからテストされ、自分自身をどのようにテストし計画的に変化に備えるか、その際の支援を得るには、という諸問題を考察する。
+    第 20 章 自分はリーダーとして、どのように値踏みされるか。
+    長々とエピソードが記述されるが、要は初めてのチーム(ここでは新学期)ではリーダーもメンバーも互いに信頼関係がなく不安で、そのためお互いの弱点を探り合い疲弊に陥る。
+    そのようなメンバーの不安を緩和するために、リーダーから最初に情報を開示する、あるいは近い将来に信頼関係を築いた後に開示する約束をすることで、安心できる環境を提供できる。
+    リーダー自身もその値踏み≒信頼関係構築の間に自己変容しチームに順応していく、といったところか。
