--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -98,3 +98,13 @@
     長々とエピソードが記述されるが、要は初めてのチーム(ここでは新学期)ではリーダーもメンバーも互いに信頼関係がなく不安で、そのためお互いの弱点を探り合い疲弊に陥る。
     そのようなメンバーの不安を緩和するために、リーダーから最初に情報を開示する、あるいは近い将来に信頼関係を築いた後に開示する約束をすることで、安心できる環境を提供できる。
     リーダー自身もその値踏み≒信頼関係構築の間に自己変容しチームに順応していく、といったところか。
+- date: 2025-08-10
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 227 ~ 236
+  notes: |
+    第 21 章 自分自身のリーダーシップ試験に通るには。
+    リーダーは周りから常にテストされるが、同時に自分自身をもテストしている。
+    自然な状況で発生する問題に対する自身の対処を通して、周りがどの様な反応をするかをテストする。
+    実際の状況でテストするのでリスクもありうるが、これらのテストはリーダー自身の成長のための基準線として役立つ。
+    また自分自身のテストでしばしば失敗をしていないなら、それは自分自身を過保護してテストが機能していない可能性がある。
+    自己変容の文脈なので、自身の観察をして適切な難易度のテストを行っていくというところか。
