--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -108,3 +108,12 @@
     実際の状況でテストするのでリスクもありうるが、これらのテストはリーダー自身の成長のための基準線として役立つ。
     また自分自身のテストでしばしば失敗をしていないなら、それは自分自身を過保護してテストが機能していない可能性がある。
     自己変容の文脈なので、自身の観察をして適切な難易度のテストを行っていくというところか。
+- date: 2025-08-11
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 237 ~ 246
+  notes: |
+    第 22 章 変わるための計画を立てる。
+    自己変容のためにはまず自分の特性ととりまく環境を知る必要がある。
+    そこで自分 1 人でできる安全で結果に即時性がある目標を立て実行する練習で、自身の変化のスタイルと環境の理解を深める。
+    行動変容の文脈においては新しい習慣の導入は難しいので、小さな変化から始めるのは効果があろうな。
+    あと技術リーダーになりたい人が実践するということもあり、いちばん重要な本人のやる気も申し分ない。
