--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -117,3 +117,12 @@
     そこで自分 1 人でできる安全で結果に即時性がある目標を立て実行する練習で、自身の変化のスタイルと環境の理解を深める。
     行動変容の文脈においては新しい習慣の導入は難しいので、小さな変化から始めるのは効果があろうな。
     あと技術リーダーになりたい人が実践するということもあり、いちばん重要な本人のやる気も申し分ない。
+- date: 2025-08-12
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 247 ~ 256
+  notes: |
+    第 23 章 変わるための時間を見つける。
+    変化のための時間を確保するための方法について。
+    大きく 3 つ、人に任せた仕事に介入しない、自分の行動を優先順位付けして組織化する(緊急対応に頼らない)、 1 つの行動で複数の利益を得る、がある。
+    また他の人の学習内容を取り込むことで時間を圧縮できる。
+    わたしの場合、仕事に関連しない学習は家事育児の隙間時間に 1 人で行うことが多く、誰かの学習内容を取り込むという側面は弱い(本も blog も誰かの学習内容といえばそうだが)。
