--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -126,3 +126,13 @@
     大きく 3 つ、人に任せた仕事に介入しない、自分の行動を優先順位付けして組織化する(緊急対応に頼らない)、 1 つの行動で複数の利益を得る、がある。
     また他の人の学習内容を取り込むことで時間を圧縮できる。
     わたしの場合、仕事に関連しない学習は家事育児の隙間時間に 1 人で行うことが多く、誰かの学習内容を取り込むという側面は弱い(本も blog も誰かの学習内容といえばそうだが)。
+- date: 2025-08-13
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 257 ~ 266
+  notes: |
+    第 24 章 変化のための支援。
+    個人的な支援システムを構築する。平たく言えば人的ネットワーク。
+    このネットワークは互助的なもので相互に支援する。
+    変化のための支援システムであれば、期待通りの回答ばかり得られるものではなく、それ自体有機的に変化できる必要がある。
+    自分の業績などが支援あってのもの、は忘れがちでよく言われる話やな。
+    わたしも手持ちの人的支援システムは少ないけどある。直接的というより間接的な支援を受けてるかな。
