--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -136,3 +136,13 @@
     変化のための支援システムであれば、期待通りの回答ばかり得られるものではなく、それ自体有機的に変化できる必要がある。
     自分の業績などが支援あってのもの、は忘れがちでよく言われる話やな。
     わたしも手持ちの人的支援システムは少ないけどある。直接的というより間接的な支援を受けてるかな。
+- date: 2025-08-14
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 267 ~ 274
+  notes: |
+    エピローグ。
+    リーダーになるのは少なからず変化によって幸福を失うリスクを伴う。
+    にも関わらず自分の動機を知ることなくリーダーになるという幻想に囚われることがある。
+    もしそのような強迫観念に囚われたら、なぜ自分はリーダーになりたいのか、リーダーになって提供できる資産と持ち込んでしまう負債は何かを問い、自分で断ち切るしかない。
+    誰かを助けたいという動機がなければ技術リーダーになれない、というのが本書の主張だし、利己的な動機だけで幻想抱いて火傷するなよってところか。
+    本編はこれで終わり。あと文献案内を残す。
