--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -146,3 +146,12 @@
     もしそのような強迫観念に囚われたら、なぜ自分はリーダーになりたいのか、リーダーになって提供できる資産と持ち込んでしまう負債は何かを問い、自分で断ち切るしかない。
     誰かを助けたいという動機がなければ技術リーダーになれない、というのが本書の主張だし、利己的な動機だけで幻想抱いて火傷するなよってところか。
     本編はこれで終わり。あと文献案内を残す。
+- date: 2025-08-15
+  bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
+  pages: 275 ~ 288
+  notes: |
+    文献案内。
+    本書を読んだあとはまず現場に出て実践すべきだというのが著者の主張。
+    リーダーシップに関してより詳しく知るべき時がきたら、掘り下げたいテーマに関する推薦する文献を読むことをお勧めする。
+    テーマは組織モデル、リーダーシップ、会議、自己評価等。哲学や禅からのアプローチもある。
+    輪読会で読んでる倫理学も哲学との関係が深く、リーダーシップは応用倫理と重なる部分もあって、多方面からの探求も面白い。
