--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -36,11 +36,11 @@
   pages: 163 ~ 174
   notes: |
     第 15 章 力、不完全性、整合性。
-    問題の殆ど情緒的・心理的な動揺なく機械的にテクニックで解決できる問題だが、実際にその様に機械的に解決されることは少ない。
+    問題の殆どは情緒的・心理的な動揺なく機械的にテクニックで解決できる問題だが、実際にその様に機械的に解決されることは少ない。
     それは低い自尊心を守るための防衛反応により、行動に移さないことによる。
     このように問題はできごとに対する反応で起こっている。
     そのできごとに対する行動パターンが成熟しているか否かで、できごとを問題にしてしまったり、問題を消滅させたりする。
-    単純化した説明では、それは人として成熟しているか否かであり、行動を起こす際に社会的・コミュイケーション的な技能を発揮できるかである。
+    単純化した説明では、それは人として成熟しているか否かであり、行動を起こす際に社会的・コミュニケーション的な技能を発揮できるかである。
     この章ちょっとわたしには難しかった。場数を踏んでなかったり成熟してなかったりでピンと来てない感じがする。
 - date: 2025-08-05
   bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
@@ -52,7 +52,7 @@
     人格の力以外でリーダーが使えるものに予算や人員のような資源≒組織上の力がある。
     それは平等に与えられるものではないため、新人リーダーはそれらを自分のチームのために他のチームから勝ち取る必要がある。
     その競争にそれまでの既存の力を変換する手段が使える。
-    例えば、重大な仕事担っているだとか居ること自体に理由がある様な場合、それらを媒介にして別の力を得る駆け引きができる。
+    例えば、重大な仕事を担っているだとか居ること自体に理由がある様な場合、それらを媒介にして別の力を得る駆け引きができる。
     これはわたしが信頼ポイントと呼んでるものに近い。仕事を通して貯めたポイントで多少の無理を勝ち取れる。
 - date: 2025-08-06
   bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
@@ -144,7 +144,7 @@
     リーダーになるのは少なからず変化によって幸福を失うリスクを伴う。
     にも関わらず自分の動機を知ることなくリーダーになるという幻想に囚われることがある。
     もしそのような強迫観念に囚われたら、なぜ自分はリーダーになりたいのか、リーダーになって提供できる資産と持ち込んでしまう負債は何かを問い、自分で断ち切るしかない。
-    誰かを助けたいという動機がなければ技術リーダーになれない、というのが本書の主張だし、利己的な動機だけで幻想抱いて火傷するなよってところか。
+    誰かを助けたいという動機がなければ技術リーダーになれない、というのが本書の主張だし、利己的な動機だけで幻想を抱いて火傷するなよってところか。
     本編はこれで終わり。あと文献案内を残す。
 - date: 2025-08-15
   bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
