--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -72,3 +72,6 @@
 - id: becoming-a-technical-leader
   bookTitle: スーパーエンジニアへの道 技術リーダーシップの人間学
   bookAuthor: Gerald. M. Weinberg, 木村 泉
+- id: the-psychology-of-computer-programming
+  bookTitle: プログラミングの心理学 25 周年記念版
+  bookAuthor: Gerald. M. Weinberg, 伊豆原弓
