--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -155,3 +155,10 @@
     リーダーシップに関してより詳しく知るべき時がきたら、掘り下げたいテーマに関する推薦する文献を読むことをお勧めする。
     テーマは組織モデル、リーダーシップ、会議、自己評価等。哲学や禅からのアプローチもある。
     輪読会で読んでる倫理学も哲学との関係が深く、リーダーシップは応用倫理と重なる部分もあって、多方面からの探求も面白い。
+- date: 2025-08-16
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: i ~ xv
+  notes: |
+    スーパーエンジニアへの道は 1986 年、本書は 1971 年に書かれてる。
+    著者のシリーズの源流が本書らしい。各章に著者の振り返りがあって答え合わせしてくれてるのもあり、読みやすい。
+    当時としてはプログラミング(というかシステム開発)を人間のの活動から理解しようとしたのは画期的だったらしい。
