--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -162,3 +162,11 @@
     スーパーエンジニアへの道は 1986 年、本書は 1971 年に書かれてる。
     著者のシリーズの源流が本書らしい。各章に著者の振り返りがあって答え合わせしてくれてるのもあり、読みやすい。
     当時としてはプログラミング(というかシステム開発)を人間のの活動から理解しようとしたのは画期的だったらしい。
+- date: 2025-08-17
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 1 ~ 3
+  notes: |
+    第Ⅰ部 人間の行動としてのプログラミング。
+    プログラミングと機械の関わりばかりが注目されてきたが、本書はプログラミングを人間的な観点から捉える。
+    初版から 25 年経った振り返り時点でも当時より膨大な金がプログラマーに投じられるようになっていた。現代もその高騰は続いている認識。
+    更にいえば AI が登場しても(一部の代替可能な層を除き)プログラマー不要論が現実にならないのは、プログラマーが単にコードを書くのが仕事でなく人間的な側面がその本質だったからって感じかな(今後は知らんが)。
