--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -161,7 +161,7 @@
   notes: |
     スーパーエンジニアへの道は 1986 年、本書は 1971 年に書かれてる。
     著者のシリーズの源流が本書らしい。各章に著者の振り返りがあって答え合わせしてくれてるのもあり、読みやすい。
-    当時としてはプログラミング(というかシステム開発)を人間のの活動から理解しようとしたのは画期的だったらしい。
+    当時としてはプログラミング(というかシステム開発)を人間の活動から理解しようとしたのは画期的だったらしい。
 - date: 2025-08-17
   bookTitle: プログラミングの心理学 25 周年記念版
   pages: 1 ~ 3
