--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -170,3 +170,13 @@
     プログラミングと機械の関わりばかりが注目されてきたが、本書はプログラミングを人間的な観点から捉える。
     初版から 25 年経った振り返り時点でも当時より膨大な金がプログラマーに投じられるようになっていた。現代もその高騰は続いている認識。
     更にいえば AI が登場しても(一部の代替可能な層を除き)プログラマー不要論が現実にならないのは、プログラマーが単にコードを書くのが仕事でなく人間的な側面がその本質だったからって感じかな(今後は知らんが)。
+- date: 2025-08-18
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 4 ~ 16
+  notes: |
+    第 1 章 プログラムを読む。
+    プログラミングを学ぶ術は、書くことと読むこと。読むときには諸々の事情がコメントに残されていることは少なく、何故そうなったか知るのは難しい。
+    そうしたコードには、コンピュータ・プログラミング言語・プログラマの知識の制約、事故の応急処置、仕様に基づく必要・不要な記述が混ざっている。
+    その背後には人の心理的要因があり、理解するのに人間の行動を研究する価値がある。
+    サンプルコードが PL/I で時代やな～と感じる。にも関わらず現代も状況はさほど変わらない。
+    コードを読め、コメントには意図を残せとか諸々の手法が発展してきても状況に大差ないのは、原因が人間の心理的要因にあるからということか。
