--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -180,3 +180,14 @@
     その背後には人の心理的要因があり、理解するのに人間の行動を研究する価値がある。
     サンプルコードが PL/I で時代やな～と感じる。にも関わらず現代も状況はさほど変わらない。
     コードを読め、コメントには意図を残せとか諸々の手法が発展してきても状況に大差ないのは、原因が人間の心理的要因にあるからということか。
+- date: 2025-08-19
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 17 ~ 32
+  notes: |
+    第 2 章 良いプログラムとは何か。
+    プログラムを評価するのは難しい。
+    判断の絶対的な指標はなく、相対的な指標でも、仕様を満たす(動く)か・計画に間に合ったか・プラットフォーム移行の容易さ・実行効率といった複数の基準があり単純に評価できない。
+    良いプログラムとは何かという問題自体が適切でないと言える。
+    振り返りでは経済的指標も増えてなおさら難しくなってる。
+    ここで言う「良い」は後の著者の本でいう品質みたい。
+    なんかまだ「スーパーエンジニアへの道」ほど面白い感じはしないな。
