--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -191,3 +191,12 @@
     振り返りでは経済的指標も増えてなおさら難しくなってる。
     ここで言う「良い」は後の著者の本でいう品質みたい。
     なんかまだ「スーパーエンジニアへの道」ほど面白い感じはしないな。
+- date: 2025-08-20
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 33 ~ 52
+  notes: |
+    第 3 章 プログラミングをどのように研究するか。
+    プログラミングの人間的な活動を研究する術として、行動科学の手法を流用する話。
+    その際に行動科学の研究でも陥る内省・観察・実験・計測・利用するデータなどの誤りについて触れ、さらにプログラミング固有の難しさについても言及している。
+    個人でなく集団を研究すべきだというのはせやなと思ったが、まだ全体的に面白みはないかな。
+    1970 年代にこの内容が書かれたという点で、その何らかの派生物の影響を自分も受けてるだろうから驚きがないのかもな。
