--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -200,3 +200,12 @@
     その際に行動科学の研究でも陥る内省・観察・実験・計測・利用するデータなどの誤りについて触れ、さらにプログラミング固有の難しさについても言及している。
     個人でなく集団を研究すべきだというのはせやなと思ったが、まだ全体的に面白みはないかな。
     1970 年代にこの内容が書かれたという点で、その何らかの派生物の影響を自分も受けてるだろうから驚きがないのかもな。
+- date: 2025-08-21
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 53 ~ 56
+  notes: |
+    第Ⅱ部 社会活動としてのプログラミング。
+    プログラムの多くは 1 人で書かれるものではないので、誰かと一緒に仕事することで様々な人間関係が生まれる。
+    この部ではグループ(別々のプログラムを開発する人々)・チーム(協力してより良い製品を開発する人々)・プロジェクトに分けて考察する。
+    振り返りによればチームの定義は先述の通りに改定された。多分チームの重要さからかな。
+    今のわたしはグループかな。許可をもらったり依頼する・されることはあれど、自分が学習してるのは確かだが周りがそうかは定かでない。
