--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -209,3 +209,13 @@
     この部ではグループ(別々のプログラムを開発する人々)・チーム(協力してより良い製品を開発する人々)・プロジェクトに分けて考察する。
     振り返りによればチームの定義は先述の通りに改定された。多分チームの重要さからかな。
     今のわたしはグループかな。許可をもらったり依頼する・されることはあれど、自分が学習してるのは確かだが周りがそうかは定かでない。
+- date: 2025-08-22
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 57 ~ 67
+  notes: |
+    第 4 章 プログラミンググループ。
+    公式な組織構造は往々にして機能不足であり、そのため非公式な組織がそれを補完する。
+    一方で組織や物理的な構造の変更が非公式な組織を破壊し、機能を損なうこともある。
+    プログラマーの自己同一性の未熟さは、書いたプログラムに対して認知的不協和を引き起こし、誤りを認められなくなる。
+    スパエンのときはやる気のある人たちが高めていくような話だったので面白かったけど、本書は今のところ未熟な人たちの底上げっぽく感じている。
+    自らの未熟さを知り学習するのは好きだが、未熟な人たちの底上げは興味ないから、そこが面白みを感じにくい理由かもな。
