--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -219,3 +219,13 @@
     プログラマーの自己同一性の未熟さは、書いたプログラムに対して認知的不協和を引き起こし、誤りを認められなくなる。
     スパエンのときはやる気のある人たちが高めていくような話だったので面白かったけど、本書は今のところ未熟な人たちの底上げっぽく感じている。
     自らの未熟さを知り学習するのは好きだが、未熟な人たちの底上げは興味ないから、そこが面白みを感じにくい理由かもな。
+- date: 2025-08-23
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 67 ~ 82
+  notes: |
+    第 4 章 プログラミンググループ。
+    自分をプログラムに投影してしまうことで感情的・防御的な反応を引き起こし、誤りを認められなくなる。
+    正しくフィードバックを受け入れるためにも、エゴレスプログラミングが重要であるとする。
+    またプログラミングの社会的環境を維持することの難しさとその弊害について。
+    昔からそうなんだろうが、問題となるようなプログラムや組織にエゴを持ち込むプログラマの振る舞いは、個人の未熟な自己同一性によるものよな。
+    本当に良くしようとして開発してるなら、そんなことを気にしてる暇ないと思うけどな。
