--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -229,3 +229,13 @@
     またプログラミングの社会的環境を維持することの難しさとその弊害について。
     昔からそうなんだろうが、問題となるようなプログラムや組織にエゴを持ち込むプログラマの振る舞いは、個人の未熟な自己同一性によるものよな。
     本当に良くしようとして開発してるなら、そんなことを気にしてる暇ないと思うけどな。
+- date: 2025-08-24
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 83 ~ 95
+  notes: |
+    第 5 章 プログラミングチーム。
+    プログラミングチームを編成する際の戦略面の話。
+    理論上は最低限のスキルがあればよいが実際はそうではなく、最短納期でシステム開発したい場合は最高のチームで臨む必要があるとか、メンバーの余剰を持たないと不測の事態に対応できないとか。
+    チーム内で割り当てる仕事が原因で不合理な地位が生まれるので慎重に割り振らないといけないとか。
+    チームの目標設定に合意していないと、不満を持って同じ目標を目指さない人がいるとか。また圧力に屈して誤った合意に至ってしまう。
+    現代でもよくある話ばかり。みんな大変やなという感想。そこまでケアしてもらわないと働けないプログラマとは一体。
