--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -239,3 +239,11 @@
     チーム内で割り当てる仕事が原因で不合理な地位が生まれるので慎重に割り振らないといけないとか。
     チームの目標設定に合意していないと、不満を持って同じ目標を目指さない人がいるとか。また圧力に屈して誤った合意に至ってしまう。
     現代でもよくある話ばかり。みんな大変やなという感想。そこまでケアしてもらわないと働けないプログラマとは一体。
+- date: 2025-08-25
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 96 ~ 102
+  notes: |
+    第 5 章 プログラミングチーム。発熱であまり読めず。
+    チーム内でリーダーシップを取る人は外部から指名された人ではないというスーパーエンジニアへの道でも触れられていた話。
+    課題に合わせて民主的にチーム内のリーダーが入れ替わる。ただし機会は平等ではない。
+    「降りる覚悟のあるリーダーだけが、ほんとうに成功する可能性がある」某アニメのようやな。
