--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -247,3 +247,13 @@
     チーム内でリーダーシップを取る人は外部から指名された人ではないというスーパーエンジニアへの道でも触れられていた話。
     課題に合わせて民主的にチーム内のリーダーが入れ替わる。ただし機会は平等ではない。
     「降りる覚悟のあるリーダーだけが、ほんとうに成功する可能性がある」某アニメのようやな。
+- date: 2025-08-26
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 102 ~ 116
+  notes: |
+    第 5 章 プログラミングチーム。熱まだ下がらず。
+    チームの危機はメンバー追加・交代、リーダー交代、メンバー同士の関係性など。
+    それの危機らはチームが民主的か権威的かで対応の難しさも変わる。
+    民主的なチームは人を足すのが難しい、権威的なチームはリーダーを変えるのが難しい、等。
+    概ねメンバーに対人スキルが要求すると考えて良さそう。あとから付けるのが技術力より難しい。
+    本書の当時になかった言葉だが、民主的なチームのメンバは HRT(Humility Respect Trust) を持って行動すべきだというところか。
