--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -257,3 +257,14 @@
     民主的なチームは人を足すのが難しい、権威的なチームはリーダーを変えるのが難しい、等。
     概ねメンバーに対人スキルが要求すると考えて良さそう。あとから付けるのが技術力より難しい。
     本書の当時になかった言葉だが、民主的なチームのメンバは HRT(Humility Respect Trust) を持って行動すべきだというところか。
+- date: 2025-08-27
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 117 ~ 129
+  notes: |
+    第 6 章 プログラミングプロジェクト。
+    プロジェクトはどのメンバーよりも長生きする。
+    そのため 1 人のキーマンの離脱でプロジェクトを崩壊させないよう、プログラマー加工工場のように新メンバーを継続的に育成・交替させる新陳代謝的な体制が必要。
+    大規模プロジェクトの成果測定は難しい。
+    報告が目的化し、成果がただの予測であったり、無難な数字で調整されがちで、実質的に無意味になる。
+    また同調圧力で順調を装う傾向があり、この解消には反論役(Devil's advocate)を据えると効果がある。
+    ただし反論役自身が大きな社会的圧力を受けることもあり、機能を損なわないために持ち回る等運用上の工夫が必要。
