--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -268,3 +268,13 @@
     報告が目的化し、成果がただの予測であったり、無難な数字で調整されがちで、実質的に無意味になる。
     また同調圧力で順調を装う傾向があり、この解消には反論役(Devil's advocate)を据えると効果がある。
     ただし反論役自身が大きな社会的圧力を受けることもあり、機能を損なわないために持ち回る等運用上の工夫が必要。
+- date: 2025-08-28
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 129 ~ 144
+  notes: |
+    第 6 章 プログラミングプロジェクト。
+    大規模プロジェクトを効率的に管理するために機能毎にチームを分割し、軍隊式の階層的組織にまとめる方法がある。
+    分割によって同じチームの目標がプロジェクトの目標と一致しなくなったり、マネージャーの偏見が評価差を生み、チーム間のいがみ合いが起こることがある。
+    階層毎のマネージャーは特に上位ほど現場をほとんど監督せず(できず)、自己の権威付けだけに熱心になる。
+    プロジェクトの失敗は殆どはマネジメントスキルの欠如による。
+    今は知らんが少なくとも 2010 年代でもこんな感じやったよな。だから二度と関わらないと心に決めてる。
