--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -278,3 +278,11 @@
     階層毎のマネージャーは特に上位ほど現場をほとんど監督せず(できず)、自己の権威付けだけに熱心になる。
     プロジェクトの失敗は殆どはマネジメントスキルの欠如による。
     今は知らんが少なくとも 2010 年代でもこんな感じやったよな。だから二度と関わらないと心に決めてる。
+- date: 2025-08-29
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 145 ~ 148
+  notes: |
+    第Ⅲ部 個人の活動としてのプログラミング。
+    個人の活動としてのプログラミングにおける個人差を正確・知性・訓練・経験のカテゴリに分類して分析する。
+    著者が振り返りでいうには、時代を経てもプログラマ自体はいずれのカテゴリでも変わっておらず、ただツールやその他の要因による生産性がはるかに向上しているということらしい。
+    それ自体は社会活動としてのプログラミングの体たらくからも、想像するに易い。
