--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -286,3 +286,12 @@
     個人の活動としてのプログラミングにおける個人差を正確・知性・訓練・経験のカテゴリに分類して分析する。
     著者が振り返りでいうには、時代を経てもプログラマ自体はいずれのカテゴリでも変わっておらず、ただツールやその他の要因による生産性がはるかに向上しているということらしい。
     それ自体は社会活動としてのプログラミングの体たらくからも、想像するに易い。
+- date: 2025-08-30
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 149 ~ 170
+  notes: |
+    第 7 章 プログラミング作業の多様性。
+    プログラミングというと恋という言葉と同じくらい多義的である。
+    その作業の多様さは、プロ・アマの違い、プロジェクト目標の違い、作業が設計やテスト等のステージで不可分だという点に起因する。
+    著者は振り返りで、多様さが目に見えて明らかな今(90 年代)なら書くことはなかった、と触れている。
+    ただ現代でも実際にそう理解しているのは、プログラマーか否かに関わらずさほど多くないという実感がある。
