--- a/contents/booklogs/2025/2025-08.yml
+++ b/contents/booklogs/2025/2025-08.yml
@@ -295,3 +295,12 @@
     その作業の多様さは、プロ・アマの違い、プロジェクト目標の違い、作業が設計やテスト等のステージで不可分だという点に起因する。
     著者は振り返りで、多様さが目に見えて明らかな今(90 年代)なら書くことはなかった、と触れている。
     ただ現代でも実際にそう理解しているのは、プログラマーか否かに関わらずさほど多くないという実感がある。
+- date: 2025-08-31
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 171 ~ 173
+  notes: |
+    第 8 章 プログラマーの性格。
+    プログラマーの性格がプログラミングに与える影響を考察する。
+    例えばシステム全体を異常終了させることでオペレータの間でも評判の悪かった 2 名は、それぞれ、無知が恥ずかしくて試行錯誤を繰り返していたパターン、自己中心的で他者の意見を受け入れられなかったパターンであった。
+    後者のような自己学習に謙虚でない性格は、個人的な観測の範囲でも、最新技術への追随を除いたとしても日常的に同じ間違いを繰り返して改善できない。
+    プログラマーとして向かない性格≒学習姿勢に問題があり機能しない、ということかな。
