--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -9,3 +9,13 @@
     性格の不変の部分と要求される特性とのギャップが強いストレスを引き起こすこともある。例えばテスターは信じ深い性格だったとしても疑り深くある必要がある。非難に「順応」するよう追い込まれないように、役割を持ち回るような運用が必要となる。
     プログラマーとして失敗しないタイプの性格特性としては、ストレス耐性、変化への適応、几帳面さ、謙虚、自信、ユーモアのセンス、が挙げられる。
     個人的に、ストレス耐性と変化への適応は同じ要素かな。変化のストレスに耐えられる容量がないと常に変化し続けられない。
+- date: 2025-09-02
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 183 ~ 190
+  notes: |
+    第 8 章 プログラマーの性格。
+    本書が書かれた当時はプログラマを選別する性格テストに最適なものはなかったといえるようだ。
+    唯一「プログラミングが好きか」という問いだけ。
+    25 年後の振り返りでは MBTI(Myers-Briggs Type Indicator)が有用であると触れられている。 16 Personalities のやつか。
+    性格テストは偽装することができるので注意が必要だが、偽装するだけの能力があるということは向いているというのは面白いな。
+    SPI も同じ印象。転職に慣れてると出がらしの問題ばかりで高得点になるし、性格特性の調整もお手の物やからな。
