--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -19,3 +19,14 @@
     25 年後の振り返りでは MBTI(Myers-Briggs Type Indicator)が有用であると触れられている。 16 Personalities のやつか。
     性格テストは偽装することができるので注意が必要だが、偽装するだけの能力があるということは向いているというのは面白いな。
     SPI も同じ印象。転職に慣れてると出がらしの問題ばかりで高得点になるし、性格特性の調整もお手の物やからな。
+- date: 2025-09-03
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 191 ~ 200
+  notes: |
+    第 9 章 知能―問題解決の能力。
+    プログラミングに影響する知能とはなにか。
+    心理的「構え」がある種の間違いを引き起こす。それは誤字・ leet のような判別しにくい記号の利用・間違ったコメントなどからコード読解の誤りにつながる。
+    正しく問題解決の知能を測るには問題回避についても同様の測定が必要だが、起こっていない現象を評価するのが難しい。他に記憶力。
+    「構え」は認知バイアスのことみたい。
+    昔 4GL のエディタがフォント変えれなくて本書に書いてるような `0` と `O` の間違いをしてバカにされたのを思い出したわ。そういう「気を付ける」問題じゃないねんよな。
+    今は気合で認知バイアスを回避するような時代ではないから、どう誤りうるかを知り、フォント変える等の誤りが発生しにくい習慣を身につける方が重要やろうな。
