--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -30,3 +30,12 @@
     「構え」は認知バイアスのことみたい。
     昔 4GL のエディタがフォント変えれなくて本書に書いてるような `0` と `O` の間違いをしてバカにされたのを思い出したわ。そういう「気を付ける」問題じゃないねんよな。
     今は気合で認知バイアスを回避するような時代ではないから、どう誤りうるかを知り、フォント変える等の誤りが発生しにくい習慣を身につける方が重要やろうな。
+- date: 2025-09-04
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 202 ~ 212
+  notes: |
+    第 9 章 知能―問題解決の能力。
+    プログラミングに必要な知能を測る適性検査(PAT)とその効果がないことについて。
+    振り返りによれば本書のレビュワに適性検査の事業に関わる人がいたため出版社を満足させるために適性検査について書いたらしい。
+    現代であればはコーディングテストやディスカッションがプログラマを「オーディション」する術になるのかな。
+    とはいえわたしはそれらも苦手で嫌いだし、何より値踏みされるのが嫌なので、なるべくそういうのに関わらずに生きたい。
