--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -39,3 +39,13 @@
     振り返りによれば本書のレビュワに適性検査の事業に関わる人がいたため出版社を満足させるために適性検査について書いたらしい。
     現代であればはコーディングテストやディスカッションがプログラマを「オーディション」する術になるのかな。
     とはいえわたしはそれらも苦手で嫌いだし、何より値踏みされるのが嫌なので、なるべくそういうのに関わらずに生きたい。
+- date: 2025-09-05
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 213 ~ 227
+  notes: |
+    第 10 章 動機づけ・訓練・経験。
+    すべての訓練・経験の要素を計測に含んでもプログラマの成績を説明できない部分が動機づけ。
+    動機づけが過剰すぎてもプレッシャーとなっていけない。金銭などの外的動機づけよりプログラマーの好きにやらせる内的動機づけの重要性。
+    教育は一般原則とスキルを身につけるため、訓練は具体的なスキルを身につけるためだが、訓練を前提にしないと教育できないものもある。
+    学習を妨げる力。失敗を見られることを恐れる。「行き止まり手法」に固執して新しいものに対する恐怖。弱さを認められない。
+    動機づけはスパエンへの道で十二分に見たので、本書の初期の動機づけに関するアイディアからは目新しく得るものはないかな。
