--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -49,3 +49,14 @@
     教育は一般原則とスキルを身につけるため、訓練は具体的なスキルを身につけるためだが、訓練を前提にしないと教育できないものもある。
     学習を妨げる力。失敗を見られることを恐れる。「行き止まり手法」に固執して新しいものに対する恐怖。弱さを認められない。
     動機づけはスパエンへの道で十二分に見たので、本書の初期の動機づけに関するアイディアからは目新しく得るものはないかな。
+- date: 2025-09-06
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 227 ~ 236
+  notes: |
+    第 10 章 動機づけ・訓練・経験。
+    プログラミング学習における独学。自分の好みの学習スタイルを知っている人は稀である。
+    独学においては計算機が提供するエラーなどの情報を余すことなく利用することが必要となる。
+    また業務においては実務を優先するだけでなく学習で得た見識を反映していくバランスが重要。
+    思うに、昔であればマニュアルから学ぶしかなかったが、今は計算機が身近になり、エディタのサジェストや AI を教師にすることで独学を追求する術が増えている。
+    となればあとは本書でも触れられている自身の動機づけと学習スタイルの理解さえあれば、効果的に独習できる。
+    時代の移り変わりの影響が大きい部分だし、著者は既に亡くなられているので実現しないが、 50 周年記念版の振り返りも見てみたかったな。
