--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -60,3 +60,12 @@
     思うに、昔であればマニュアルから学ぶしかなかったが、今は計算機が身近になり、エディタのサジェストや AI を教師にすることで独学を追求する術が増えている。
     となればあとは本書でも触れられている自身の動機づけと学習スタイルの理解さえあれば、効果的に独習できる。
     時代の移り変わりの影響が大きい部分だし、著者は既に亡くなられているので実現しないが、 50 周年記念版の振り返りも見てみたかったな。
+- date: 2025-09-07
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 237 ~ 240
+  notes: |
+    第 Ⅳ 部 プログラミングの道具。
+    腕の良い職人でも欠陥があったり悪い道具を使うと二流の仕事しかできず職人も二流になる。
+    プログラミングでも同様に言語のような道具を正しく利用することで良い仕事ができる。
+    個人的に、この話題が出ると必ず弘法大師も実際には筆を選んでいた話をするが、案外伝わらない。それ以前に仕事で関わるプログラマには道具の特性を意識しない人も多い。
+    仕事ではプログラミング言語等の技術スタックを選べないこともままあるが、道具の欠点を知っていれば後付のツールで補完できることもある。当然道具自身の特性をカバーするのは楽ではないけど。
