--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -69,3 +69,15 @@
     プログラミングでも同様に言語のような道具を正しく利用することで良い仕事ができる。
     個人的に、この話題が出ると必ず弘法大師も実際には筆を選んでいた話をするが、案外伝わらない。それ以前に仕事で関わるプログラマには道具の特性を意識しない人も多い。
     仕事ではプログラミング言語等の技術スタックを選べないこともままあるが、道具の欠点を知っていれば後付のツールで補完できることもある。当然道具自身の特性をカバーするのは楽ではないけど。
+- date: 2025-09-08
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 241 ~ 254
+  notes: |
+    第 11 章 プログラミング言語。
+    心理学的な意味で人間向けに設計されていないプログラミング言語が人間と機械のコミュニケーションエラーを引き起こすというような内容。
+    あと習得済み言語のサンクコストが新しい言語へ移行する心理的なハードルになるという話。
+    なんとなくだが、本書の執筆当時だと機械語・アセンブリ・原初の高級言語という感じだったので、自然言語でプログラミングすることへの憧れがあったのではないかな。
+    生成 AI が自然言語を受けて代わりにプログラミングする時代になって、文字通り自然言語でプログラミングする時代になってきているが、自然言語のような曖昧化しやすい言語でプログラミングするのにどうにも違和感がある。
+    具体的な指示を詳しく自然言語で書くより、形式化された DSL としてのプログラミング言語を利用することの方が効率的でない？
+    逆パターンもある。今多くのプログラマは AI に書き散らしてもらった大量のコードをレビューしてるけど、自然言語だと中々レビューも難しいんじゃないかな？どうだろう。
+    達人が道具を選ぶ際に汎用的な道具を選ばずに特化した道具を使うのと同じ気がするのだけど、わたしの先見性がないだけなのかな。
