--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -81,3 +81,14 @@
     具体的な指示を詳しく自然言語で書くより、形式化された DSL としてのプログラミング言語を利用することの方が効率的でない？
     逆パターンもある。今多くのプログラマは AI に書き散らしてもらった大量のコードをレビューしてるけど、自然言語だと中々レビューも難しいんじゃないかな？どうだろう。
     達人が道具を選ぶ際に汎用的な道具を選ばずに特化した道具を使うのと同じ気がするのだけど、わたしの先見性がないだけなのかな。
+- date: 2025-09-09
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 255 ~ 263
+  notes: |
+    第 12 章 プログラミング言語の設計原則。
+    統一性がある構文でなければ、ヒトは例外パターンを記憶しきれず自分の能力に不安を感じる。
+    その心理的曖昧さのため、探索的にいろんな機能を使えなくなり、過剰なカッコを使う等の防御的な行動を起こす。
+    ただし統一性に関する責任の多くはプログラマー個人の仕事(名付けやスタイルの非統一性)にある。
+    この章の話題はプログラマー脳で触れられていたものと同じか。
+    やろうと思えば構文ルールの統一性は何らかのメタな検査器で検査しうるだろうけど、名付けの統一性を測る術はプ脳でも命名の雛形を作るとかのヒトの頑張り次第な印象だった。
+    人がプログラミングし続ける限りずっと付きまとう課題なんやろな。
