--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -92,3 +92,13 @@
     この章の話題はプログラマー脳で触れられていたものと同じか。
     やろうと思えば構文ルールの統一性は何らかのメタな検査器で検査しうるだろうけど、名付けの統一性を測る術はプ脳でも命名の雛形を作るとかのヒトの頑張り次第な印象だった。
     人がプログラミングし続ける限りずっと付きまとう課題なんやろな。
+- date: 2025-09-10
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 263 ~ 273
+  notes: |
+    第 12 章 プログラミング言語の設計原則。
+    チャンキングによってプログラミングの理解をコンパクトにできる。これはデータ構造を定義して使うこと等でも同様。
+    プログラムの局所性・線形性はヒトの記憶でいう共感覚記憶・逐次記憶に対応する。
+    局所性を高めることはコードそのものの理解を助け、線形性を高めることは順序立てた処理の理解を助ける。
+    やっぱプ脳と重なる分野の話。共感覚記憶・逐次記憶は触れられてなかった記憶だが。
+    時代を考えると相当進んでるな。
